[project]
name = "decaytracker"
version = "0.1.0"
description = "The Trust Feed — AI-powered URL audits for corporate trust scoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-ai>=0.0.55",
    "playwright>=1.49.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decaytracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
